--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,14 +17,26 @@
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "TT Hoves Regular", sans-serif;
+  font-weight: 300;
 }
 @font-face {
-  font-family: "TT-HovesPro-TrialRegular";
-  src: url("/fonts/TT-HovesPro-TrialRegular.ttf") format("truetype");
+  font-family: "TT Hoves Bold";
+  src: url("/public/fonts/TT-Hoves Pro-Trial-Bold.ttf") format("truetype");
+  font-weight: bold;
+  font-style: normal;
 }
 
 @font-face {
-  font-family: "TT-Hoves Pro-Trial-Bold";
-  src: url("/fonts/TT-Hoves Pro-Trial-Bold.ttf") format("truetype");
+  font-family: "TT Hoves Light Italic";
+  src: url("/public/fonts/TT-HovesPro-TrialLight-Italic.ttf") format("truetype");
+  font-weight: 300;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: "TT Hoves Regular";
+  src: url("/public/fonts/TT-HovesPro-TrialRegular.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
 }
