--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -22,21 +22,21 @@ body {
 }
 @font-face {
   font-family: "TT Hoves Bold";
-  src: url("/public/fonts/TT-Hoves Pro-Trial-Bold.ttf") format("truetype");
+  src: url("/fonts/TT-Hoves Pro-Trial-Bold.ttf") format("truetype");
   font-weight: bold;
   font-style: normal;
 }
 
 @font-face {
   font-family: "TT Hoves Light Italic";
-  src: url("/public/fonts/TT-HovesPro-TrialLight-Italic.ttf") format("truetype");
+  src: url("/fonts/TT-HovesPro-TrialLight-Italic.ttf") format("truetype");
   font-weight: 300;
   font-style: italic;
 }
 
 @font-face {
   font-family: "TT Hoves Regular";
-  src: url("/public/fonts/TT-HovesPro-TrialRegular.ttf") format("truetype");
+  src: url("/fonts/TT-HovesPro-TrialRegular.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
