--- a/src/app/machine/esmart/shu/shu.module.scss
+++ b/src/app/machine/esmart/shu/shu.module.scss
@@ -4,6 +4,8 @@
     margin: 0 auto;
     padding: 20px;
     background-color: #fafafa;
+    display: flex;
+    flex-direction: column;
   }
   
   .title {
@@ -15,7 +17,7 @@
   }
   
   /* Filter Section */
-  .filter-card {
+  .filtercard {
     background-color: #ffffff;
     padding: 20px;
     border-radius: 10px;
@@ -24,34 +26,34 @@
     margin-bottom: 20px;
   }
   
-  .filter-card .MuiTextField-root,
-  .filter-card .MuiSelect-root {
+  .filtercard .MuiTextField-root,
+  .filtercard .MuiSelect-root {
     margin-bottom: 15px;
   }
   
   /* Data Table */
-  table {
+  .table {
     width: 100%;
     border-collapse: collapse;
     margin-top: 30px;
   }
   
-  th, td {
+  .th, .td {
     padding: 15px;
     text-align: left;
     border-bottom: 1px solid #ddd;
   }
   
-  th {
+  .th {
     background-color: #f4f4f9;
     font-weight: bold;
   }
   
-  tbody tr:hover {
+  .tbody .tr:hover {
     background-color: #f9f9f9;
   }
   
-  .table-row {
+  .tablerow {
     transition: background-color 0.3s ease;
   }
   
